--- a/css/scrolltotop_arrow_style.css
+++ b/css/scrolltotop_arrow_style.css
@@ -6,7 +6,8 @@
 }
 
 #scrolltotop_parent {
-  background: #00BB00;
+  /* background: #00BB00; */
+  background: #336af7;
   cursor: pointer;
   width: 50px;
   height: 50px;
